04272021 -- src/main/resources/static/ -- added UML diagram of model for reference; StarUML filetype;

--- a/pom.xml
+++ b/pom.xml
@@ -9,24 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mdspicesmicro</groupId>
-	<artifactId>user-account-service</artifactId>
+	<artifactId>userprofileservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>User-Account-Service</name>
-	<description>M&D-User-Account-Service</description>
-
-	<developers>
-		<developer>
-	      <name>Nathan R. Tolbert</name>
-	      <email>ntolbertu85@gmail.com</email>
-	      <organization>FlacoApps</organization>
-	      <organizationUrl>https://www.github.com/lifeModder19135</organizationUrl>
-	    </developer>
-	</developers>
-	
+	<name>User-Profile-Service</name>
+	<description>M&amp;D User-Profile-Service</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,6 +33,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -64,10 +54,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-  			<groupId>org.springframework.boot</groupId>
-  			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
