--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>user-account-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>User-Account-Service</name>
-	<description>M&D-User-Account-Service</description>
+	<description>M&amp;D-User-Account-Service</description>
 
 	<developers>
 		<developer>
@@ -68,6 +68,12 @@
 		<dependency>
   			<groupId>org.springframework.boot</groupId>
   			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.javamoney</groupId>
+    		<artifactId>moneta</artifactId>
+    		<version>1.2</version>
+    		<type>pom</type>
 		</dependency>
 	</dependencies>
 
