--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
     		<version>1.2</version>
     		<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
